# thingflash

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  package-lock.json  pyproject.toml  thingflash.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: thingflash_mvp_ver.yaml
src/thingflash/: __init__.py
src/thingflash/aws/: iam.py  iot.py  permissions.py  session.py  sts.py
src/thingflash/aws/template/: thingflash-bootstrap.yaml
src/thingflash/cli/: common.py  main.py
src/thingflash/cli/commands/: certificates.py  mqtt.py  project.py  shadow.py  things.py
src/thingflash/cli/output/: __init__.py
src/thingflash/core/: constants.py  doctor.py  errors.py  executor.py  manifest.py  planner.py  registry.py  scaffold.py  state.py
tests/unit/: test_cli.py
tests/unit/aws/: conftest.py  test_doctor_e2e.py  test_iam.py  test_sts.py
tests/unit/cli/: test_init.py  test_things.py  test_workflow.py
tests/unit/core/: conftest.py  test_doctor.py  test_executor.py  test_manifest.py  test_planner.py  test_scaffold.py
