[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thingflash"
version = "0.0.1"
description = "Production-ready AWS IoT infrastructure from a declarative YAML manifest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Togayev Alisher", email="alisherka0151@gmail.com" }]
keywords = ["aws", "iot", "iot-core", "cli", "infrastructure", "cloudformation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[iot,s3,dynamodb,iam,cloudformation]>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "boto3-stubs[iot,s3,dynamodb,iam,cloudformation]>=1.34",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://thingflash.com"
Repository = "https://github.com/thingflash/thingflash"
Issues = "https://github.com/thingflash/thingflash/issues"

[project.scripts]
thingflash = "thingflash.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/thingflash"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/thingflash"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not e2e'"
markers = [
    "e2e: end-to-end tests that hit real AWS (excluded by default)",
    "integration: tests that use moto to mock AWS",
]

[tool.coverage.run]
source = ["src/thingflash"]
branch = true

[tool.coverage.report]
show_missing = true
